fixed modals on all pages and changed JB's pic

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
       <h5>Senior Regional Sales Manager - North America, East</h5>
     </div>
     <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JB.jpg">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JB.png">
       <div class="middle">
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:jordan@microtipsusa.com">jordan@microtipsusa.com</a></p>
@@ -282,7 +282,7 @@
     <div class="modal-content">
       <div class="modal-header" style="padding:35px 50px;">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4><span class="glyphicon glyphicon-lock"></span> Contact Us!</h4>
+        <h1>Contact Us!</h1>
       </div>
       <div class="modal-body" style="padding:40px 50px;">
         <form role="form">
