--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="modal-content">
       <div class="modal-header" style="padding:35px 50px;">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4><span class="glyphicon glyphicon-lock"></span> Contact Us!</h4>
+        <h1>Contact Us!</h1>
       </div>
       <div class="modal-body" style="padding:40px 50px;">
         <form role="form">
