new content and news pages

--- a/about.html
+++ b/about.html
@@ -52,13 +52,20 @@
 
 <div class="container">
   <h1>About Us</h1>
-  <p>Microtips Technology strives to be one of the pioneers in new LCD technologies, to evolve with the needs of our customers, and to provide the best possible prices with short lead times.
-  <br><br>Established in 1990, we are now one of the leading global manufacturers and suppliers of LCD Modules. Today, we produce a full gamut of color and monochrome graphic LCD, character LCD and custom-made LCD modules. Additionally, we have the ability to produce foremost technology trends such as Color STN, FSTN, Chip on Glass (COG), Chip on Board (COB), Tape Automated Bonding(TAB), and integrated capacitive touch panels. Further, we offers complete turnkey solutions such as design and product development for our customers (in OEM Design and Manufacturing).
-  <br><br>Local sales and engineering support in the Americas, Europe, and Asia have made us a very competitive force in the display industry.
-  <br><br>We have ensured that the manufacturing plants in Taiwan and mainland China are equipped with state-of-the-art machinery. Their above standard quality control measures have won us the merit of the ISO9001:2000 and ISO14001-2004 Quality Certified Control and Assurance.
-  <br><br>We believe in building a close rapport with our customers and the sales staff takes extreme pride in their customers’ end products.
-  <br><br>Our local engineering and sales staff follows the complete life cycle of LCD products from pre-engineering to large volume orders. We are continuously focusing our energies on the development and manufacturing process while closely following new technologies to create better LCDs.
-  <br><br>Our highly trained sales staff and engineers offer unparallel local technical support in order to ensure the success of your design. We greatly appreciate the prospect of introducing ourselves and our products to your company.<br></p>
+  <p>Microtips Technology strives to be the pioneer in new LCD technology. We aim to evolve with the needs of our customers and to provide the best possible prices with the shortest production times.
+  
+  <br><br>Established in 1990, Microtips Technology is now one of the leading global manufacturers and suppliers of LCD Modules. Today, we produce a full gamut of TFT Display Modules, Active Matrix and Passive Matrix OLED Modules, Graphic and Character Monochrome LCD Mosules, and Fully Custom LCD Modules. We also have the ability to produce state of the art technology like IPS displays, high resolution OLED displays, and Magnetic Resonance Wireless Power. Furthermore, we offers complete turnkey solutions for our customers by contributing to product design and development.
+  
+  <br><br>Microtips Technology provides local sales and engineering support in the Americas, Europe, and Asia. We are always available to discuss your project and make sure it will be a perfect fit for your needs.
+  
+  <br><br>We have ensured that the manufacturing plants in Taiwan and mainland China are equipped with modern machinery. Their excellent quality control measures have earned us the latest quality management certificates for both ISO9001 and ISO14001.
+  
+  <br><br>We believe in building a close rapport with our customers so that the end product comes out exactly as intended. Because of this, our team takes extreme pride in our customers’ end products.
+  
+  <br><br>Our exceptional engineering and sales staff follow the complete life cycle of your LCD products, from designing and pre-engineering to delivering large volume orders and beyond. We offer unparalleled continuous support in order to ensure the success of your design. We are continuously focusing our energies on the development and manufacturing process of your LCD for your current projects while closely following new technologies to create better displays for your future projects.
+  
+  <br><br></p>
+  <h4>Contact us today to see how we can make your next product more usable and better looking with a Microtips Technology Display!</h4>
   <br>
 </div>
 
