--- a/industries.html
+++ b/industries.html
@@ -62,17 +62,17 @@
 
 <div class="col-xs-12" style="height: 125px;"></div>
 
-<div class="container">
+<div class="container" style="min-height: 40%">
   <h1 style="text-align: center;">Industries</h1>
   <div class="blueSplitter"></div>
   <div class="row">
-    <p style="font-size: 18px; padding: 15px; line-height: 35px;">Our expert team of design engineers develops innovative, high-performance solutions for a variety of unique environments encountered in the automotive, medical, industrial, and consumer markets. This includes capacitive touch panels with glove/stylus support and water immunity, as well as other ruggedized, robust, shock and vibration resistant products designed to excel in harsh conditions. Our products for automotive applications are designed with industry certified controllers and are especially suited for demanding environments. We also design LCD displays and OLED displays with quick design cycles and an emphasis on low production cost for a number of other applications.<br><br>
-
-    Check out the links below to learn about our capabilities in your particular market.</p>
+    <p style="font-size: 18px; padding: 15px;">Microtips Technology provides displays in many different industries around the world. Because of this, we have become familiar with certain requirements that are necessary in these different markets. Our team can guide and advise on what displays will be best for your particular application. We can also tune any of our standard displays to work better for your environment. We offer anything from wide-temperature fluid for automotive applications to display module ruggedization for harsh or humid environments to tuning our capacitive touchscreen with glove and stylus support in mind.  
+    <br><br>
+    Click the icons below to learn more about our products designed for your particular market.</p>
   </div>
 </div>
 
-<div class="navbar nav" style="padding: 90px 0px;">
+<div class="navbar nav" style="min-height: 27%;">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
     <div class="container">
       <ul class="nav nav-tabs nav-justified">
