inserted some industry presentations

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
   <div class="row">
     <div class="col-sm-3 col-xs-12"></div>
     <div class="col-sm-6 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\RA.jpg">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\RA.png">
       <div class="middle">
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:arif@microtipsusa.com">arif@microtipsusa.com</a></p>
@@ -93,7 +93,7 @@
   </div>
   <div class="row">
     <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GV.jpg">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GV.png">
       <div class="middle">
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a></p>
@@ -117,7 +117,7 @@
       <h5>Regional Sales Manager - North America, West</h5>
     </div>
     <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GM.jpg">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GM.png">
       <div class="middle">
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:grace-ann@microtipsusa.com">grace-ann@microtipsusa.com</a></p>
@@ -131,7 +131,7 @@
   <div class="row">
     <div class="col-sm-2 col-xs-12"></div>
     <div class="col-sm-4 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\NR.jpg">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\NR.png">
       <div class="middle">
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:nadim@microtipsusa.com">nadim@microtipsusa.com</a></p>
@@ -157,7 +157,7 @@
   </div>
   <div class="row">
     <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SH.jpg">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SH.png">
       <div class="middle">
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:admin@microtipsusa.com">admin<br>@microtipsusa.com</a></p>
@@ -190,7 +190,7 @@
       <h5>Logistics Manager</h5>
     </div>
     <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SB.jpg">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SB.png">
       <div class="middle">
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:sultan@microtipsusa.com">sultan<br>@microtipsusa.com</a></p>
@@ -202,7 +202,7 @@
       <h5>ODM/OEM Project Manager</h5>
     </div>
     <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DK.jpg">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DK.png">
       <div class="middle">
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:david@microtipsusa.com">david<br>@microtipsusa.com</a></p>
@@ -224,7 +224,7 @@
     <h1>Locations</h1>
     <div class="row">
       <div class="col-xs-4">
-        <img class="img-responsive" src="images\about\locations\MTT.JPG">
+        <img class="img-responsive" src="images\about\locations\MTU.jpg">
         <h2>USA</h2>
         <p>3504 Lake Lynda Drive, Orlando, FL, 32817</p>
       </div>
