--- a/industries.html
+++ b/industries.html
@@ -179,19 +179,19 @@
           <div class="col-xs-12" style="">
             <h2>Consumer</h2>
           </div>
-          <p>Howdy, I'm in Section Character Monochrome.</p>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
         <div class="tab-pane" id="hvacTab">
           <div class="col-xs-12" style="">
             <h2>HVAC</h2>
           </div>
-          <p>Howdy, I'm in Section Graphic Monochrome.</p>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRdOFDqReDSJbzyPyspLPYrn9_yhkCWyxakxjofR2yZCnC8UU9AEQlwEyvmWmyhTtJfmq3KNUfGWf5E/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
         <div class="tab-pane" id="telecomTab">
           <div class="col-xs-12" style="">
             <h2>Telecom</h2>
           </div>
-          <p>Howdy, I'm in Section Custom Segment.</p>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRq5H49QYuapoWd3kxksRYwCTJlLQdk4lO7OLG9Po99ik3sbYHPQ6_IBqsZBtFHipTneHdJzeEIm1c3/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
       </div>
     </div>
