--- a/allProducts.html
+++ b/allProducts.html
@@ -115,9 +115,11 @@
           <div class="row">
             <h3>Learn More</h3>
           </div>
-          <div class="row" style="min-height: 500px;">
+          <div class="row" style="min-height: 100px;">
             <ul>
               <li><a href="https://www.youtube.com/watch?v=1MHS386tyxk">What is an OLED display?</a></li>
+              <li><a href="articles/2016_Ultra_Low_Cost_4.3_TFT.html">Ultra Low Cost 4.3" TFT</a></li>
+              <li><a href="articles/2016_Low_Cost_LCD_Modules.html">2016 Low Cost LCD Modules</a></li>
             </ul>
           </div>
           <div class="row">
