--- a/products.html
+++ b/products.html
@@ -105,6 +105,11 @@
     </div>
   </div>
   <div class="blueSplitter"></div>
+  <div class="col-xs-12" style="">
+    <h2 style="margin-top: 10px;">Featured Products</h2>
+  </div>
+  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRXn_bOvZinFqSQWjqpH90TJ3U0OdUZnHYobOKhmyenxDereTEJgySDQQ_hbSJUcDx4Mi0Od-hKyIB7/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <div class="blueSplitter" style="margin-top: 10px;"></div>
 </div>
 
 <div class="subsection">
