--- a/allProducts.html
+++ b/allProducts.html
@@ -168,10 +168,38 @@
           <p>Howdy, I'm in Section Touch panel.</p>
         </div>
         <div class="tab-pane" id="charmonoTab">
-          <div class="col-xs-12" style="">
-            <h2>Character Monochrome LCD</h2>
+          <div class="row">
+            <div class="col-xs-6" style="padding: 20px;">
+              <img class="img-responsive" src="images/index/CharacterMonochrome.jpg">
+            </div>
+            <div class="col-xs-6" style="">
+              <h2>Character Monochrome LCD</h2>
+              <h4>Digital displays capable of displaying monochrome (single color) text and symbols, with presets in various column and row formats<br></h4>
+              <p>
+                Standard Resolutions: 8 ~ 40 Characters and 1 ~ 4 Lines<br>
+                LED Backlights: amber, blue, green, red, yellow/green, white<br>
+                Rear Polarizers: Reflective, Transflective, Transmissive<br>
+                Fluid/Polarizers: TN, STN, FSTN, FFSTN, High Black, Ultra Black, Paper White, VLCD<br>
+                IS Packages: chiponboard, chip on flex, chip on glass, TAB<br>
+                Font Generators: English Chinese, Russian/Cyrillic<br>
+              </p>
+              <h4>Cusomizations: glass size, resolution, IC Packages, touch panels, backlight, interface, FPC size, connection type, bezel, heaters, optical films, etc.</h4>
+            </div>
           </div>
-          <p>Howdy, I'm in Section Character Monochrome.</p>
+          <div class="row">
+            <div style="background-color: #1E90FF; height: 2px;"></div>
+          </div>
+          <div class="row">
+            <h3>Learn More</h3>
+          </div>
+          <div class="row" style="min-height: 500px;">
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=1MHS386tyxk">What is an OLED display?</a></li>
+            </ul>
+          </div>
+          <div class="row">
+            <div style="background-color: #1E90FF; height: 2px;"></div>
+          </div>
         </div>
         <div class="tab-pane" id="graphmonoTab">
           <div class="col-xs-12" style="">
