--- a/industries.html
+++ b/industries.html
@@ -90,9 +90,7 @@
               <h2>Automotive LCD</h2>
             </div>
           </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
-          </div>
+          <div class="blueSplitter"></div>
           <div class="row">
             <div class="col-xs-12" style="padding-top: 5px;">
               <p>Microtips Technology brings to you a whole new range of color TFT LCD display products, from the latest in LCD technology. A TFT LCD Display, or color LCD module is a variant of an LCD which uses thin film transistor technology to improve an image quality. Color LCD module is use in many appliances such as television, computer monitors, kindles, mobile phone, and navigation system within a airplane cockpit and much more. We have a rich inventory of color TFT LCDs products manufactured at our facilities in Taiwan and Mainland China.</p>
@@ -119,9 +117,7 @@
               <img class="img-responsive" src="images/products/tft/7.0 TFT.png">
             </div>
           </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
-          </div>
+          <div class="blueSplitter"></div>
           <div class="row">
             <h3>Learn More</h3>
           </div>
@@ -129,9 +125,6 @@
             <ul>
               <li><a href="https://www.youtube.com/watch?v=1MHS386tyxk">What is an OLED display?</a></li>
             </ul>
-          </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
           </div>
         </div>
         <div class="tab-pane" id="industrialTab">
@@ -154,9 +147,7 @@
               </ul>
             </div>
           </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
-          </div>
+          <div class="blueSplitter"></div>
           <div class="row">
             <h3>Learn More</h3>
           </div>
@@ -164,9 +155,6 @@
             <ul>
               <li><a href="https://www.youtube.com/watch?v=1MHS386tyxk">What is an OLED display?</a></li>
             </ul>
-          </div>
-          <div class="row">
-            <div style="background-color: #1E90FF; height: 2px;"></div>
           </div>
         </div>
         <div class="tab-pane" id="medicalTab">
@@ -193,6 +181,7 @@
           </div>
           <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRq5H49QYuapoWd3kxksRYwCTJlLQdk4lO7OLG9Po99ik3sbYHPQ6_IBqsZBtFHipTneHdJzeEIm1c3/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
+        <div class="blueSplitter"></div>
       </div>
     </div>
   </div>
