removed color bar from top of all pages. New stock images on index page. New banner photos for products, industries, and news pages.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 
 <div class="example3">
   <nav class="navbar navbar-default navbar-fixed-top" style="background-color: white;">
-    <div style="background-color: #1E90FF;" class="row">
-      <div class="col-xs-12" style="color: white; text-align: center;">An engineering company specializing in Liquid Crystal Displays</div>
-    </div>
     <div class="container">
       <div class="container-fluid">
     
@@ -51,10 +48,10 @@
 <div class="section homeSectionOne">
   <div class="container">
     <div class="row">
-      <div class="col-xs-6" style="color: white; text-align: right;">
+      <div class="col-xs-12 col-sm-6" style="color: white; text-align: right;">
         <h1></h1>
       </div>
-      <div class="col-xs-6" style="color: white; text-align: right; padding: 300px 25px 150px 25px;">
+      <div class="col-xs-12 col-sm-6" style="color: white; text-align: right; padding: 30% 25px 15% 25px; text-shadow: 2px 2px 15px black;">
         <h1>Providing fully custom display solutions since 1990</h1>
       </div>
     </div>
