--- a/industries.html
+++ b/industries.html
@@ -29,9 +29,6 @@
 
 <div class="example3">
   <nav class="navbar navbar-default navbar-fixed-top" style="background-color: white;">
-    <div style="background-color: #1E90FF;" class="row">
-      <div class="col-xs-12" style="color: white; text-align: center;">An engineering company specializing in Liquid Crystal Displays</div>
-    </div>
     <div class="container">
       <div class="container-fluid">
     
@@ -60,11 +57,10 @@
   </nav>
 </div>
 
-<div class="col-xs-12" style="height: 125px;"></div>
+<div class="section industriesSectionOne"></div>
 
 <div class="container" style="min-height: 40%">
-  <h1 style="text-align: center;">Industries</h1>
-  <div class="blueSplitter"></div>
+  <div class="blueSplitter" style="margin-top: 20px;"></div>
   <div class="row">
     <p style="font-size: 18px; padding: 15px;">Microtips Technology provides displays in many different industries around the world. Because of this, we have become familiar with certain requirements that are necessary in these different markets. Our team can guide and advise on what displays will be best for your particular application. We can also tune any of our standard displays to work better for your environment. We offer anything from wide-temperature fluid for automotive applications to display module ruggedization for harsh or humid environments to tuning our capacitive touchscreen with glove and stylus support in mind.  
     <br><br>
