trying out new header pics and a custom font

--- a/products.html
+++ b/products.html
@@ -57,7 +57,9 @@
   </nav>
 </div>
 
-<div class="section productsSectionOne"></div>
+<div class="section productsSectionOne">
+  <h1 style="text-align: center; color: white; padding-top: 5%; padding-bottom: 5%; font-size: 200px;">Products</h1>
+</div>
 
 <div class="container">
   <div class="blueSplitter" style="margin-top: 20px;"></div>
