--- a/industries.html
+++ b/industries.html
@@ -57,7 +57,9 @@
   </nav>
 </div>
 
-<div class="section industriesSectionOne"></div>
+<div class="section industriesSectionOne">
+  <h1 style="text-align: center; color: white; padding-top: 5%; padding-bottom: 5%; font-size: 200px;">Industries</h1>
+</div>
 
 <div class="container" style="min-height: 40%">
   <div class="blueSplitter" style="margin-top: 20px;"></div>
