cleaning up some things with stylesheet

--- a/industries.html
+++ b/industries.html
@@ -58,7 +58,7 @@
 </div>
 
 <div class="section industriesSectionOne">
-  <h1 style="text-align: center; color: white; padding-top: 5%; padding-bottom: 5%; font-size: 200px; text-shadow: 2px 2px 15px black;">Industries</h1>
+  <h1 class="headerWords">Industries</h1>
 </div>
 
 <div class="container" style="min-height: 40%">
