--- a/products.html
+++ b/products.html
@@ -58,7 +58,7 @@
 </div>
 
 <div class="section productsSectionOne">
-  <h1 style="text-align: center; color: white; padding-top: 5%; padding-bottom: 5%; font-size: 200px; text-shadow: 2px 2px 15px black;">Products</h1>
+  <h1 class="headerWords">Products</h1>
 </div>
 
 <div class="container">
