new font, changed about heading. I think it looks pretty cool

--- a/about.html
+++ b/about.html
@@ -45,10 +45,12 @@
   </nav>
 </div>
 
-<div class="section aboutSectionOne"></div>
+<div class="section aboutSectionOne">
+  <h1 class="headerWords" style="padding-top: 250px; padding-bottom: 250px;">About Us</h1>
+</div>
 
 <div class="container">
-  <h1>About Us</h1>
+  <div class="blueSplitter" style="margin-top: 15px; margin-bottom: 15px;"></div>
   <p>Microtips Technology strives to be the pioneer in new LCD technology. We aim to evolve with the needs of our customers and to provide the best possible prices with the shortest production times.
   
   <br><br>Established in 1990, Microtips Technology is now one of the leading global manufacturers and suppliers of LCD Modules. Today, we produce a full gamut of TFT Display Modules, Active Matrix and Passive Matrix OLED Modules, Graphic and Character Monochrome LCD Mosules, and Fully Custom LCD Modules. We also have the ability to produce state of the art technology like IPS displays, high resolution OLED displays, and Magnetic Resonance Wireless Power. Furthermore, we offers complete turnkey solutions for our customers by contributing to product design and development.
@@ -83,7 +85,7 @@
           Cell: (407) 758-1095
         </div>
       </div>
-      <h2>Reza "Arif" Arfin</h2>
+      <h3>Reza "Arif" Arfin</h3>
       <h5>Executive Vice President, North American Operations</h5>
     </div>
     <div class="col-sm-3 col-xs-12"></div>
@@ -121,7 +123,7 @@
           Phone: (407) 273-0204 x108
         </div>
       </div>
-      <h2>Grace-Ann Munroe</h2>
+      <h3>Grace-Ann Munroe</h3>
       <h5>Inside Sales Manager</h5>
     </div>
   </div>
@@ -136,7 +138,7 @@
           Direct: (866) 239-3171
         </div>
       </div>
-      <h2>Nadim Rahman</h2>
+      <h3>Nadim Rahman</h3>
       <h5>Chief Technical Officer</h5>
     </div>
     <div class="col-sm-4 col-xs-12 meetTeam2">
@@ -222,17 +224,17 @@
     <div class="row">
       <div class="col-xs-4">
         <img class="img-responsive" src="images\about\locations\MTU.jpg">
-        <h2>USA</h2>
+        <h3>USA</h3>
         <p>3504 Lake Lynda Drive, Orlando, FL, 32817</p>
       </div>
       <div class="col-xs-4">
         <img class="img-responsive" src="images\about\locations\MTT.JPG">
-        <h2>Taiwan</h2>
+        <h3>Taiwan</h3>
         <p>Somewhere in Taiwan</p>
       </div>
       <div class="col-xs-4">
         <img class="img-responsive" src="images\about\locations\MTT.JPG">
-        <h2>China</h2>
+        <h3>China</h3>
         <p>Somewhere in China</p>
       </div>
     </div>
