--- a/distreps.html
+++ b/distreps.html
@@ -118,7 +118,7 @@
 
 <div id="content-desktop">
   <div class="container">
-    <h1>Distributors</h1>
+    <h1 style="margin-top: 100px;">Distributors</h1>
     <div class="blueSplitter"></div>
 
     <table>
@@ -150,7 +150,7 @@
 
     <h1>Representatives</h1>
     <div class="blueSplitter"></div>
-    <div class="col-xs-12 col-sm-3">
+    <div class="col-xs-12 col-sm-4">
       <div class="row">
         <h3 onclick="showReps(this.innerHTML)">United States</h3>
         <div class="blueSplitter" style="margin-bottom: 10px;"></div>
@@ -227,7 +227,10 @@
         <div class="blueSplitter"></div>
       </div>
     </div>
-    <div class="col-xs-12 col-sm-9">
+    <div class="col-xs-12 col-sm-8">
+      <div class="repInfo startingRep" style="text-align: center; padding: 70px;">
+        <h3>Click your region on the left pane to view the reps in your area!</h3>
+      </div>
       <ul style="padding-left: 10px;">
         <div class="repInfo USAreps" style="display: none;">
           <h3>United States</h3>
