gotta work on commiting more so I can comment more. Let's see, some image location changes. OH new paragraph font.

--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
 
 <div class="container">
   <div class="blueSplitter" style="margin-top: 15px; margin-bottom: 15px;"></div>
-  <p>Microtips Technology strives to be the pioneer in new LCD technology. We aim to evolve with the needs of our customers and to provide the best possible prices with the shortest production times.
+  <h4>Microtips Technology strives to be the pioneer in new LCD technology. We aim to evolve with the needs of our customers and to provide the best possible prices with the shortest production times.</h4>
   
-  <br><br>Established in 1990, Microtips Technology is now one of the leading global manufacturers and suppliers of LCD Modules. Today, we produce a full gamut of TFT Display Modules, Active Matrix and Passive Matrix OLED Modules, Graphic and Character Monochrome LCD Mosules, and Fully Custom LCD Modules. We also have the ability to produce state of the art technology like IPS displays, high resolution OLED displays, and Magnetic Resonance Wireless Power. Furthermore, we offers complete turnkey solutions for our customers by contributing to product design and development.
+  <p>Established in 1990, Microtips Technology is now one of the leading global manufacturers and suppliers of LCD Modules. Today, we produce a full gamut of TFT Display Modules, Active Matrix and Passive Matrix OLED Modules, Graphic and Character Monochrome LCD Mosules, and Fully Custom LCD Modules. We also have the ability to produce state of the art technology like IPS displays, high resolution OLED displays, and Magnetic Resonance Wireless Power. Furthermore, we offers complete turnkey solutions for our customers by contributing to product design and development.
   
   <br><br>Microtips Technology provides local sales and engineering support in the Americas, Europe, and Asia. We are always available to discuss your project and make sure it will be a perfect fit for your needs.
   
@@ -63,7 +63,7 @@
   
   <br><br>Our exceptional engineering and sales staff follow the complete life cycle of your LCD products, from designing and pre-engineering to delivering large volume orders and beyond. We offer unparalleled continuous support in order to ensure the success of your design. We are continuously focusing our energies on the development and manufacturing process of your LCD for your current projects while closely following new technologies to create better displays for your future projects.
   
-  <br><br></p>
+  <br></p>
   <h4>Contact us today to see how we can make your next product more usable and better looking with a Microtips Technology Display!</h4>
   <br>
 </div>
