--- a/distreps.html
+++ b/distreps.html
@@ -128,7 +128,11 @@
             <img class="img-responsive" src="images\distreps\mouser.png">
           </a>
         </th>
-        <td>The partnership between Microtips USA and Mouser has been around since 2010 and allows small scale projects and tinkerers to experience large scale quality. Mouser carries large stock of our most popular products as well as new and innovative products. Give their website a visit and see the large array of Microtips products that can be purchased and delivered anywhere in the world.</td>
+        <td>
+          <p>
+            The partnership between Microtips USA and Mouser has been around since 2010 and allows small scale projects and tinkerers to experience large scale quality. Mouser carries large stock of our most popular products as well as new and innovative products. Give their website a visit and see the large array of Microtips products that can be purchased and delivered anywhere in the world.
+          </p>
+        </td>
       </tr>
       <tr>
         <th>
@@ -136,7 +140,11 @@
             <img class="img-responsive" src="images\distreps\avnet.svg">
           </a>
         </th>
-        <td>Avnet can design, make, supply, and deliver for customers of every size in every corner of the world – whether your product is still a notion on a napkin, in mass production, or at any point in between. Our partnership with them allows us to provide world class products to all their customers, whether they are big or small, and get a working product out into the world.</td>
+        <td>
+          <p>
+            Avnet can design, make, supply, and deliver for customers of every size in every corner of the world – whether your product is still a notion on a napkin, in mass production, or at any point in between. Our partnership with them allows us to provide world class products to all their customers, whether they are big or small, and get a working product out into the world.
+          </p>
+        </td>
       </tr>
       <tr>
         <th>
@@ -144,7 +152,11 @@
             <img class="img-responsive" src="images\distreps\worldMicro.png">
           </a>
         </th>
-        <td>World Micro is a company that might be selling Microtips products.</td>
+        <td>
+          <p>
+            World Micro is a company that might be selling Microtips products.
+          </p>
+        </td>
       </tr>
     </table>
 
@@ -152,7 +164,7 @@
     <div class="blueSplitter"></div>
     <div class="col-xs-12 col-sm-4">
       <div class="row">
-        <h3 onclick="showReps(this.innerHTML)">United States</h3>
+        <h3 class="repRegionsCountry" style="margin-top: 10px;" onclick="showReps(this.innerHTML)">United States</h3>
         <div class="blueSplitter" style="margin-bottom: 10px;"></div>
         <div onclick="showReps(this.innerHTML)" class="col-xs-3 repRegions" style="padding: 5px 0px;">AK</div>
         <div onclick="showReps(this.innerHTML)" class="col-xs-3 repRegions" style="padding: 5px 0px;">AL</div>
@@ -206,7 +218,7 @@
         <div onclick="showReps(this.innerHTML)" class="col-xs-3 repRegions" style="padding: 5px 0px;">WY</div>
       </div>
       <div class="row">
-        <h3 style="margin-top: 10PX;" onclick="showReps(this.innerHTML)">Canada</h3>
+        <h3 class="repRegionsCountry" style="margin-top: 10PX;" onclick="showReps(this.innerHTML)">Canada</h3>
         <div class="blueSplitter" style="margin-bottom: 10px;"></div>
         <div onclick="showReps(this.innerHTML)" class="col-xs-3 repRegions" style="padding: 5px 0px;">AB</div>
         <div onclick="showReps(this.innerHTML)" class="col-xs-3 repRegions" style="padding: 5px 0px;">BC</div>
@@ -223,7 +235,7 @@
         <div onclick="showReps(this.innerHTML)" class="col-xs-3 repRegions" style="padding: 5px 0px;">YT</div>
       </div>
       <div class="row">
-        <h3 onclick="showReps(this.innerHTML)">Mexico</h3>
+        <h3 class="repRegionsCountry" style="margin-top: 10px;" onclick="showReps(this.innerHTML)">Mexico</h3>
         <div class="blueSplitter"></div>
       </div>
     </div>
