--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
           <div class="nav navbar-nav navbar-right">
-            <button class="btn btn-info navbar-btn" id="myBtn">Contact Us!</button>
+            <ul class="nav navbar-nav">
+              <li><i class="fa fa-facebook-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
+              <li><i class="fa fa-google-plus-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
+              <li><i class="fa fa-instagram" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
+              <li><i class="fa fa-linkedin-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
+              <li><i class="fa fa-twitter-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
+              <li><i class="fa fa-youtube-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
+              <li><i class="fa fa-rebel" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
+              <li><button class="btn btn-info navbar-btn" id="myBtn">Contact Us!</button></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -74,7 +83,7 @@
         <p>An OLED LCD gives your product great resolution and rich, vibrant colors. Available in full-color Active Matrix or single-color Passive Matrix.</p>
       </a>
       <a href="allProducts.html#tpTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
-        <img class="img-responsive productImage" src="images/index/TP.jpg" height="200px">
+        <img class="img-responsive productImage" src="images/index/TP.png" height="200px">
         <h3>Touch Panel</h3>
         <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
       </a>
