--- a/industries.html
+++ b/industries.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script>
     if ( $(window).width() > 767) {      
-      var shiftWindow = function() { scrollBy(0, -200) };
+      var shiftWindow = function() { scrollBy(0, -180) };
       window.addEventListener("hashchange", shiftWindow);
       function load() { if (window.location.hash) shiftWindow(); }
     } 
@@ -61,7 +61,7 @@
   <h1 class="headerWords">Industries</h1>
 </div>
 
-<div class="container" style="min-height: 40%">
+<div class="container">
   <div class="blueSplitter" style="margin-top: 20px;"></div>
   <div class="row">
     <p style="font-size: 18px; padding: 15px;">Microtips Technology provides displays in many different industries around the world. Because of this, we have become familiar with certain requirements that are necessary in these different markets. Our team can guide and advise on what displays will be best for your particular application. We can also tune any of our standard displays to work better for your environment. We offer anything from wide-temperature fluid for automotive applications to display module ruggedization for harsh or humid environments to tuning our capacitive touchscreen with glove and stylus support in mind.  
@@ -70,7 +70,7 @@
   </div>
 </div>
 
-<div class="navbar nav" style="min-height: 27%;">
+<div class="navbar nav">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
     <div class="container">
       <ul class="nav nav-tabs nav-justified">
