--- a/index.html
+++ b/index.html
@@ -37,16 +37,11 @@
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
           <div class="nav navbar-nav navbar-right">
-            <ul class="nav navbar-nav">
-              <li><i class="fa fa-facebook-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
-              <li><i class="fa fa-google-plus-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
-              <li><i class="fa fa-instagram" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
-              <li><i class="fa fa-linkedin-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
-              <li><i class="fa fa-twitter-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
-              <li><i class="fa fa-youtube-square" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
-              <li><i class="fa fa-rebel" style="font-size:29px; margin-top: 10px; margin-right: 5px; color: #1E90FF;"></i></li>
-              <li><button class="btn btn-info navbar-btn" id="myBtn">Contact Us!</button></li>
-            </ul>
+            <a href="https://www.facebook.com/MicrotipsTechnology"><i class="navbarIcons fa fa-facebook-square"></i></a>
+            <a href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
+            <a href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
+            <a href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
+            <button class="btn btn-info navbar-btn" id="contactBtn" style="margin-left: 0px; margin-top: -6px;">Contact Us!</button>
           </div>
         </div>
       </div>
@@ -246,7 +241,7 @@
 
 <script>
 $(document).ready(function(){
-    $("#myBtn").click(function(){
+    $("#contactBtn").click(function(){
         $("#myModal").modal();
     });
 });
